# stabileo

./: BENCHMARKS.md  CHANGELOG.md  CURRENT_STATUS.md  DOCS.md  POSITIONING.md  PRODUCT_ROADMAP.md  README.md  ROADMAP.md  SOLVER_ROADMAP.md  VERIFICATION.md
engine/: Cargo.toml  README.md  SHELL_FAMILY_FEASIBILITY.md
engine/benches/: assembly_bench.rs  solver_bench.rs  workflow_bench.rs
engine/src/: lib.rs
engine/tests/: BENCHMARK_REFERENCES.md  BENCHMARK_TRACKING.md  advanced_3d.rs  bench_phases.rs  differential_fuzz.rs  helpers.rs  integration_connection_check.rs  integration_load_cases.rs  integration_plastic_3d.rs  integration_plate_improvements.rs  integration_serviceability.rs  integration_staged_3d.rs  integration_staged_analysis.rs  integration_timber_check.rs  kinematic.rs  parity.rs  postprocess.rs  sparse_shell_gates.rs  validation_3d_advanced_analysis.rs  validation_3d_analysis.rs  validation_3d_beam_bending_axes.rs  validation_3d_bugs.rs  validation_3d_cantilever_loading.rs  validation_3d_cantilever_verification.rs  validation_3d_continuous_beam.rs  validation_3d_distributed_loads.rs  validation_3d_equilibrium.rs  validation_3d_frame_stability.rs  validation_3d_grid_structures.rs  validation_3d_inclined_supports.rs  validation_3d_modal_dynamic.rs  validation_3d_moment_distribution.rs  validation_3d_space_frame_basic.rs  validation_3d_supports.rs  validation_3d_torsion_effects.rs  validation_advanced_corotational.rs  validation_aisc_stability.rs  validation_ansys_vm.rs  validation_ansys_vm_additional.rs  validation_ansys_vm_extended.rs  (+210 more)
web/: CLAUDE.md
(+272 files in other folders)
