[package]
name = "dedaliano-engine"
version = "0.1.0"
edition = "2021"
authors = ["Dedaliano Team"]
description = "High-performance 2D structural analysis engine"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
parallel = ["rayon"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Better panic messages in WASM
console_error_panic_hook = { version = "0.1", optional = true }

# For JS console logging
web-sys = { version = "0.3", features = ["console"] }

# Parallel element assembly (optional, not WASM-compatible)
rayon = { version = "1.10", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "solver_bench"
harness = false

[[bench]]
name = "assembly_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
